--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6196,10 +6196,13 @@ header .button {
     top: 0
 }
 
+
+
 footer {
-    background-color: #111;
+    background-color: #111 !important;
     text-align: left;
-    color: #fff
+    color: #fff;
+    margin-bottom: 0 !important;
 }
 
 footer a {
