--- a/src/_includes/pre-devis.html
+++ b/src/_includes/pre-devis.html
@@ -1,19 +1,27 @@
 <div class="pre-reservation">
     <p style="color: #fff; font-size: 25px; font-weight: 300;">Un devis personnalisé en quelques clics.</p>
-    <form action="https://formspree.io/f/xqaqazvd" method="POST" class="p20">
+    <form id="devisForm" method="post" action="{{ site.data.company.url.notify }}" class="p20">
+        <input type="hidden" name="lang" value="fr" />
+        <input type="hidden" name="redirectUrl" value="{{site.data.company.url.redirect}}" />
+        <input type="hidden" name="type" value="devis" />
+        <input type="hidden" name="website" value="{{ site.data.company.website }}" />
+        <input type="hidden" name="lang" value="{{ site.data.company.lang }}" />
+        <input type="hidden" name="firstName" value="" />
+        <input type="hidden" name="condition" value="on" />
+        <input type="hidden" name="key" value="{{ site.data.company.recaptcha.server }}" />
 
         <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 clabel">
                 <div class="form-group has-feedback">
                     <label for="nom">Nom</label><br />
-                    <input type="text" name="nom" class="form-control" placeholder="Nom">
+                    <input type="text" name="name" class="form-control" placeholder="Nom" required>
                 </div>
             </div>
 
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6  clabel">
                 <div class="form-group has-feedback">
                     <label for="telephone">Tél</label>
-                    <input type="text" name="telephone" class="form-control" placeholder="Tél">
+                    <input type="text" name="telephone" class="form-control" placeholder="Tél" required>
                 </div>
             </div>
         </div>
@@ -21,13 +29,13 @@
             <div class="col-xs-6 clabel ">
                 <div class=" padl form-group has-feedback">
                     <label for="email">Email</label><br />
-                    <input type="email" name="email" class="form-control" placeholder="text@exemple.fr">
+                    <input type="email" name="email" class="form-control" placeholder="text@exemple.fr" required>
                 </div>
             </div>
             <div class="col-xs-6  clabel">
                 <div class="form-group has-feedback">
                     <label for="code-postal">Code postal</label><br />
-                    <input type="text" name="code-postal" class="form-control" placeholder="Code postal">
+                    <input type="text" name="zipcode" class="form-control" placeholder="Code postal">
                 </div>
             </div>
         </div>
@@ -36,7 +44,7 @@
             <div class="col-sm-12">
                 <div class="form-group has-feedback">
                     <label for="prestation">Prestation</label>
-                    <select name="prestation" class="form-control">
+                    <select name="prestation" class="form-control" required>
                         <option value="Climatisation">Climatisation</option>
                         <option value="Pompe à chaleur">Pompe à chaleur</option>
                         <option value="Chauffe-eau">Chauffe-eau</option>
@@ -47,11 +55,23 @@
             <div class="col-sm-12">
                 <div class="form-group has-feedback">
                     <label for="message">Message</label>
-                    <textarea name="message" class="form-control" rows="6"></textarea>  
+                    <textarea name="message" class="form-control" rows="6"></textarea>
+                </div>
+
+                <div class="col-sm-12">
+                    <div class="form-group">
+                        <div class="g-recaptcha" data-sitekey="{{ site.data.company.recaptcha.client }}">
+                        </div>
+                        <br />
+                        <div id="devis-form-response" class="text-white"
+                            style="color: #000 !important; font-size: 1rem;">
+                        </div>
+                        <input style="display: none" type="submit" value="Submit"
+                            class="wpcf7-form-control wpcf7-submit" />
+                    </div>
                 </div>
             </div>
         </div>
-
 
         <div class="text-center">
             <input id="btSubmit" class="button" type="submit" value="Envoyer">
