--- a/src/_includes/javascript-bottom.html
+++ b/src/_includes/javascript-bottom.html
@@ -1,12 +1,14 @@
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/bxslider.css" />
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/clockpicker.css" />
-
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="{{ site.baseurl }}/assets/js/jquery-1.11.0.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/24b7f338c4.js"></script>
 <script src="{{ site.baseurl }}/assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 <script src="{{ site.baseurl }}/assets/js/clockpicker.js" type="text/javascript"></script>
 <script src="{{ site.baseurl }}/assets/js/datepicker-locales/bootstrap-datepicker.fr.js" type="text/javascript"></script>
+
+<script src="{{ site.baseurl }}/assets/js/formSubmit.js"></script>
 
 <script>
     $('.bootstrap-datepicker input').datepicker({
