--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -22,5 +22,5 @@
         rel="stylesheet">
 
     <link rel="stylesheet/less" type="text/css" href="{{ site.baseurl }}/assets/less/bootstrap.less">
-    <script src="{{ site.baseurl }}/assets/js/less-1.5.0.min.js" type="text/javascript"></script>
+    <!-- <script src="{{ site.baseurl }}/assets/js/less-1.5.0.min.js" type="text/javascript"></script> -->
 </head>
